--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 body{
     margin: 0px;
+    font-family: "Ubuntu", sans-serif;
 }
 
 header{
@@ -21,7 +24,6 @@ header{
     justify-content: space-between;
     align-items: center;
     gap: 40px;
-    font-family: "Roboto", sans-serif;
     color: white;
 }
 
@@ -33,4 +35,41 @@ header{
 }
 .navIcons img{
     width: 84px;
+}
+#bleu{
+    background-color: rgba(51,77,92,255);
+    height: 300px;
+    display: flex;
+    justify-content: space-between;
+}
+#boite{
+    width: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 75px;
+}
+#boite img{
+    height: 200px;
+}
+#titre{
+    color: white;
+    width: 75%;
+    margin: 75px;
+}
+
+#titre h2{
+    font-size: 70px;
+    font-weight: 400;
+    margin: 0;
+    margin-bottom: 20px;
+}
+#titre h4{
+    font-size: 50px;
+    font-weight: 400;
+    margin: 0;
+}
+#diveclo h2{
+    font-size: 50px
+    
 }
