--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ footer{
     text-align: right;
     margin-bottom: 30px;
     margin-right: 20px;
+    color: grey;
 }
 footer section div div p {
     margin-top: 40px;
